<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">JustPark</string>
    <string name="action_settings">Settings</string>
    <string name="all">All</string>
    <string name="favorites">Favorites</string>
    <string name="parking_share">Share</string>
    <string name="parking_navigate">Navigate</string>
    <string name="parking_add_favorite">Add to favorites</string>
    <string name="parking_remove_favorite">Remove from favorites</string>
    <string name="parking_name">Name</string>
    <string name="parking_places">Places</string>
    <string name="parking_address">Address</string>
    <string name="receive_notifications">Receive notifications when the number of places change</string>
    <string name="notifications">Notifications</string>
    <string name="update">Update</string>
    <string name="automatic_update">Automatic update</string>
    <string name="general_interval">Parking status update interval</string>
    <string name="switch_notifications">Enable notifications</string>
    <string name="search_close">Search closest</string>
    <string name="view_map">View parking in map</string>
    <string name="coords">Coordinates</string>
    <string name="added_favourite">%1$s added to favourites</string>
    <string name="remove_favourite">%1$s removed from favourites</string>
    <string name="free_places">Free places</string>
    <string name="location">Location</string>
    <string name="last_updated_note">(last updated %1$s)</string>
    <string name="parking_location">Parking location</string>
    <string name="location_error">Error retrieving location. Check GPS and try again</string>
    <string name="automatic_update_key">automatic_update</string>
    <string name="general_interval_key">general_interval</string>
    <string name="switch_notifications_key">switch_notifications</string>
    <string name="updates_category_key">updates_category</string>
    <string name="notifications_category_key">notifications_category</string>
    <string name="third_category">Thirdcategory</string>
    <string name="widget">Widget</string>
    <string name="widget_preference_key">widgetkey</string>
    <string name="widget_behaviour">Widget behaviour</string>

    <string-array name="general_interval">
        <item>Every 5 minutes</item>
        <item>Every 10 minutes</item>
        <item>Every 15 minutes</item>
    </string-array>
    <string-array name="order">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="widget_values">
        <item>View parking info</item>
        <item>View parking in map</item>
    </string-array>

</resources>