<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/parking_name"
        style="?android:attr/textAppearanceLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/parking_name" />

    <TextView
        style="?android:attr/listSeparatorTextViewStyle"
        android:paddingTop="10dp"
        android:text="@string/free_places" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/text_with_header_left_margin"
        android:paddingTop="@dimen/between_views_margin" >

        <TextView
            android:id="@+id/parking_places"
            style="?android:attr/textAppearanceMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/parking_places" />

        <TextView
            android:id="@+id/parking_last_updated"
            style="?android:attr/textAppearanceSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <TextView
        style="?android:attr/listSeparatorTextViewStyle"
        android:paddingTop="10dp"
        android:text="@string/location" />

    <TextView
        android:id="@+id/parking_address"
        style="?android:attr/textAppearanceMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/parking_address"
        android:paddingLeft="@dimen/text_with_header_left_margin"
        android:paddingTop="@dimen/between_views_margin" />

    <TextView
        android:id="@+id/coords"
        style="?android:attr/textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/coords"
        android:paddingLeft="@dimen/text_with_header_left_margin" />

    <TextView
        style="?android:attr/listSeparatorTextViewStyle"
        android:paddingTop="10dp"
        android:text="@string/notifications" />

    <CheckBox
        android:id="@+id/cb_notification"
        style="?android:attr/textAppearanceMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/text_with_header_left_margin"
        android:paddingTop="@dimen/between_views_margin"
        android:text="@string/receive_notifications" />

</LinearLayout>