<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/parking_favorite"
        android:icon="@drawable/ic_action_favorite"
        android:showAsAction="ifRoom"
        android:title="@string/parking_remove_favorite"/>
    <item
        android:id="@+id/parking_navigate"
        android:icon="@drawable/ic_action_send_now"
        android:showAsAction="ifRoom"
        android:title="@string/parking_navigate"/>
    <item
        android:id="@+id/parking_share"
        android:actionProviderClass="android.widget.ShareActionProvider"
        android:icon="@drawable/ic_action_share"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/parking_share"/>

</menu>